src/content/docs/en/26.0.0/rpc/wallet/getreceivedbylabel.md
---
name: getreceivedbylabel
btcversion: 26.0.0
btcgroup: wallet
permalink: en/doc/26.0.0/rpc/wallet/getreceivedbylabel/
---

getreceivedbylabel "label" ( minconf include_immature_coinbase )

Returns the total amount received by addresses with <label> in transactions with at least [minconf] confirmations.

Arguments:
1. label                        (string, required) The selected label, may be the default label using "".
2. minconf                      (numeric, optional, default=1) Only include transactions confirmed at least this many times.
3. include_immature_coinbase    (boolean, optional, default=false) Include immature coinbase transactions.

Result:
n    (numeric) The total amount in BTC received for this label.

Examples:

Amount received by the default label with at least 1 confirmation
> bitcoin-cli getreceivedbylabel ""

Amount received at the tabby label including unconfirmed amounts with zero confirmations
> bitcoin-cli getreceivedbylabel "tabby" 0

The amount with at least 6 confirmations
> bitcoin-cli getreceivedbylabel "tabby" 6

The amount with at least 6 confirmations including immature coinbase outputs
> bitcoin-cli getreceivedbylabel "tabby" 6 true

As a JSON-RPC call
> curl --user myusername --data-binary '{"jsonrpc": "1.0", "id": "curltest", "method": "getreceivedbylabel", "params": ["tabby", 6, true]}' -H 'content-type: text/plain;' http://127.0.0.1:8332/


